--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "jschardet": "^3.1.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.4",
+    "sass": "^1.93.2",
     "vite-plugin-pwa": "^1.1.0"
   },
   "devDependencies": {
